<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"

    >

    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />


    </group>

    <item android:title="Usuário">
        <menu>
            <item
                android:id="@+id/nav_mylist"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_mylist" />
            <item
                android:id="@+id/nav_favoritos"
                android:icon="@drawable/ic_menu_star"
                android:iconTint="@color/colorBlack"
                android:title="@string/menu_favorites" />

            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_add_list"
                android:title="@string/menu_create" />
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_menu_login"
                android:title="@string/menu_login" />

        </menu>
    </item>


</menu>
