<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#2E3A49"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageMapa"
        android:layout_width="match_parent"
        android:layout_height="229dp"
        android:background="#6A000000"
        android:contentDescription="@string/app_name"
        tools:srcCompat="@drawable/padrao" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textNome"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/layout_nome"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textNumPlayers"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/layout_nome"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textTipoTatica"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/nome_tatica"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>