<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@drawable/bg_degrade_2_rotete"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewFoto1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/siege" />

            <ImageView
                android:id="@+id/imageViewFoto2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/siege" />

            <ImageView
                android:id="@+id/imageViewFoto3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/siege" />

            <ImageView
                android:id="@+id/imageViewFoto4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/siege" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinnerTatica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#000000" />

        </LinearLayout>

        <EditText
            android:id="@+id/editTextNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/background_text_box"
            android:ems="10"
            android:hint="@string/layout_nome"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#8DFFFFFF" />

        <EditText
            android:id="@+id/editTextDetalhamento"
            android:layout_width="match_parent"
            android:layout_height="131dp"
            android:layout_margin="12dp"
            android:background="@drawable/background_text_box"
            android:ems="10"
            android:hint="@string/Detalhamento"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#8DFFFFFF" />

        <Spinner
            android:id="@+id/spinnerMapa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#000000" />

        <Button
            android:id="@+id/buttonSalvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button"
            android:text="@string/Confirmar"
            android:textColor="#DAFFFFFF" />

    </LinearLayout>

</LinearLayout>